# virtual-elevation-analyzer-web

./: .gitignore  DEPLOYMENT.md  PROJECT_STATUS.md  README-IMPLEMENTATION.md  README.md  build.sh  fit_file_output.html  package.json  test-wasm.js
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: air_density.rs  dem_processor.rs  fit_decoder.rs  fit_parser.rs  fitparser_wrapper.rs  lib.rs  security.rs  utils.rs  virtual_elevation.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/components/: AnalysisParameters.ts  FitFileProcessor.ts  MapVisualization.ts
frontend/src/utils/: CsvParser.ts  DEMManager.ts  DataInterpolation.ts  DataProtection.ts  GeoCalculations.ts  ParameterStorage.ts  ResultsStorage.ts  ViewportAdapter.ts  WeatherAPI.ts  WeatherCache.ts
